Ajustado imagens da pagina registro

--- a/html/Formularios_inscriçoes.html
+++ b/html/Formularios_inscriçoes.html
@@ -12,7 +12,7 @@
 
     <header>
         <nav>
-            <a href="../index.html"><img src="../imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
+            <a href="../index.html"><img src="../assets/imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
             <ul>
                 <li class="itens"><a href="../index.html"> Home</a></li>
                 <li class="itens"><a href="../html/Artigos_sbre_doação.html">Artigos</a></li>
@@ -61,7 +61,7 @@
             <input type="submit" value="Enviar">
         </form>
         <div>
-        <img src="../imagens/imagen-registro.png" alt="imagem" class="imagem">
+        <img src="../assets/imagens/imagen-registro.png" alt="imagem" class="imagem">
     </div>
 </div>
     </main>
@@ -90,14 +90,14 @@
             <div class="social">
                 <h1>Redes Sociais</h1>
                 <ul class="lista">
-                    <li><a href="#"><img src="../imagens/social/icone-twitter.svg" alt="icone-twitter"></a></li>
-                    <li><a href="#"><img src="../imagens/social/icone-facebook.svg" alt="icone-facebook"></a></li>
-                    <li><a href="#"><img src="../imagens/social/icone-instagram.svg" alt="icone-instagram"></a></li>
+                    <li><a href="#"><img src="../assets/imagens/social/icone-twitter.svg" alt="icone-twitter"></a></li>
+                    <li><a href="#"><img src="../assets/imagens/social/icone-facebook.svg" alt="icone-facebook"></a></li>
+                    <li><a href="#"><img src="../assets/imagens/social/icone-instagram.svg" alt="icone-instagram"></a></li>
                 </ul>
             </div>
     
             <div class="qr-code2">
-                <img src="../imagens/frame1.png" alt="qr-code">
+                <img src="../assets/imagens/frame1.png" alt="qr-code">
                 <h3>Compartilhe nosso site</h3>
             </div>
         </div>
