--- a/html/Formularios_inscriçoes.html
+++ b/html/Formularios_inscriçoes.html
@@ -9,10 +9,16 @@
     <link rel="stylesheet" href="../styles/cabecalho.css">
     <link rel="stylesheet" href="../styles/cadastro.css">
     <link rel="stylesheet" href="../styles/rodape.css">
+     <script src="../js/Artigos.js" defer></script>
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 <body>
+     <div class="container">
+        <input type="checkbox" id="btn" name="btn">
+        <label for="btn"></label>
+        
+    </div>
 
     <header>
         <nav>
