--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -9,11 +9,17 @@
     <link rel="stylesheet" href="../styles/cabecalho.css">
     <link rel="stylesheet" href="../styles/duvidas.css">
     <link rel="stylesheet" href="../styles/rodape.css">
+    <script src="../js/Artigos.js" defer></script>
     <!-- Nome do site -->
     <title>HemoBlog: Gotas de Vida</title>
 </head>
 
 <body>
+ <div class="container">
+        <input type="checkbox" id="btn" name="btn">
+        <label for="btn"></label>
+        
+    </div>
     <header>
         <nav>
             <a href="../index.html"><img src="../assets/imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
