--- a/html/dicas-doacao.html
+++ b/html/dicas-doacao.html
@@ -11,9 +11,15 @@
     <link rel="stylesheet" href="../styles/cabecalho.css">
     <link rel="stylesheet" href="../styles/artigo-completo.css">
     <link rel="stylesheet" href="../styles/rodape.css">
+    <script src="../js/Artigos.js" defer></script>
 </head>
 
 <body>
+    <div class="container">
+        <input type="checkbox" id="btn" name="btn">
+        <label for="btn"></label>
+        
+    </div>
 
     <header>
         <nav>
