--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
     <link rel="stylesheet" href="./styles/home.css">
     <link rel="stylesheet" href="./styles/rodape.css">
     <script src="https://kit.fontawesome.com/4fca10f768.js" crossorigin="anonymous"></script>
+     <script src="./js/Artigos.js"defer></script>
 </head>
 
+
 <body>
+    
+    <div class="container">
+        <input type="checkbox" id="btn" name="btn">
+        <label for="btn"></label>
+        
+    </div>
 
     <!-- Cabeçalho -->
     <header>
