--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -44,7 +44,7 @@
 
             <div class="pergunta">
                 <dt><button aria-controls="pergunta3"  aria-expanded="false">O que é feito com o sangue que doamos?</button></dt>
-                <dd id="pergunta3">passa por um processo de separação de hemocomponentes. Uma única bolsa se transforma em quatro: uma de hemácias,
+                <dd id="pergunta3">Passa por um processo de separação de hemocomponentes. Uma única bolsa se transforma em quatro: uma de hemácias,
                     uma de plaquetas, uma de plasma e outra de crioprecipitado</dd>
             </div>
 
@@ -70,38 +70,38 @@
             </div>
             
             <div class="pergunta">
-                <dt><button aria-controls="pergunta8"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
-                <dd id="pergunta8">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+                <dt><button aria-controls="pergunta8"  aria-expanded="false">Eu fiz uma cirurgia recentemente. Posso doar sangue?</button></dt>
+                <dd id="pergunta8">Você deve esperar 72 horas para doar sangue após uma extração dentária. Operações simples, como apendicite e retirada de varizes, pedem 3 meses. Procedimentos mais complexos, como a remoção da tireoide ou de um rim, meio ano. Caso você tenha passado por uma transfusão de sangue ou fez uma tatuagem, é importante aguardar por um ano.</dd>
             </div>
 
             <div class="pergunta">
-                <dt><button aria-controls="pergunta9"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
-                <dd id="pergunta9">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+                <dt><button aria-controls="pergunta9"  aria-expanded="false">É necessário jejum para doar sangue?</button></dt>
+                <dd id="pergunta9">O candidato não pode estar em jejum! No entanto, ele não deve ter ingerido alimentos gordurosos (como “bacon”, ovos, feijoada, etc.) e após o almoço, aguardar pelo menos 3 horas para doação.</dd>
             </div>
 
             <div class="pergunta">
-                <dt><button aria-controls="pergunta10"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
-                <dd id="pergunta10">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+                <dt><button aria-controls="pergunta10"  aria-expanded="false">Qual o limite de doações de sangue?</button></dt>
+                <dd id="pergunta10">O intervalo mínimo entre doações é de 60 dias para homens e 90 dias para mulheres. É importante ressaltar que os homens podem doar no máximo 4 vezes em 12 meses e as mulheres 3 vezes nesse mesmo período. Para pessoas com mais de 60 anos, o intervalo mínimo entre as doações é de 6 meses.</dd>
             </div>
 
             <div class="pergunta">
-                <dt><button aria-controls="pergunta11"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
-                <dd id="pergunta11">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+                <dt><button aria-controls="pergunta11"  aria-expanded="false">E depois de doar sangue? Devo seguir alguma recomendação médica?</button></dt>
+                <dd id="pergunta11">Sim. Evite esforços físicos, beba bastante água, não fume por duas horas e evite ingerir álcool pelo resto do dia. Também é importante não praticar esportes radicais, como paraquedismo ou mergulho, ou dirigir veículos de grande porte.</dd>
             </div>
 
             <div class="pergunta">
-                <dt><button aria-controls="pergunta12"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
-                <dd id="pergunta12">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+                <dt><button aria-controls="pergunta12"  aria-expanded="false">Qual o período de inaptidão para quem foi considerado caso suspeito ou confirmado de covid-19 com apresentação de sintomas?</button></dt>
+                <dd id="pergunta12">O período de inaptidão é de 10 dias após a completa recuperação.</dd>
             </div>
 
             <div class="pergunta">
-                <dt><button aria-controls="pergunta13"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
-                <dd id="pergunta13">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+                <dt><button aria-controls="pergunta13"  aria-expanded="false">Quem tomou vacina recentemente pode doar sangue?</button></dt>
+                <dd id="pergunta13">Quem tomou a vacina da febre amarela deve aguardar 30 dias para fazer uma doação. Já para vacina contra gripe, o prazo é de 48 horas. No caso da vacina contra o novo coronavírus é preciso esperar 48 horas após a dose de Coronavac, e sete dias após a aplicação das demais.</dd>
             </div>
 
             <div class="pergunta">
-                <dt><button aria-controls="pergunta14"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
-                <dd id="pergunta14">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+                <dt><button aria-controls="pergunta14"  aria-expanded="false">Quem já teve hepatite pode doar sangue?</button></dt>
+                <dd id="pergunta14">Pessoas que tiveram hepatite viral após os 10 anos de idade não podem doar sangue. Os casos em que exista dúvida, o candidato deve procurar o Hemocentro mais próximo para avaliação do caso.</dd>
             </div>
             <div>
                 <a href="#modal" class="botao">Faça sua Pergunta</a>
