Ajustes no modo dark

--- a/html/Formularios_inscriçoes.html
+++ b/html/Formularios_inscriçoes.html
@@ -5,21 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Doação de Sangue</title>
+
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/cabecalho.css">
     <link rel="stylesheet" href="../styles/cadastro.css">
     <link rel="stylesheet" href="../styles/rodape.css">
-     <script src="../js/Artigos.js" defer></script>
+    <link rel="stylesheet" href="../styles/modo-dark.css">
+    
+    <script src="../js/Artigos.js" defer></script>
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 <body>
-     <div class="container">
-        <input type="checkbox" id="btn" name="btn">
-        <label for="btn"></label>
-        
-    </div>
-
     <header>
         <nav>
             <a href="../index.html"><img src="../assets/imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
@@ -28,6 +25,10 @@
                 <li class="item"><a href="Artigos_sbre_doação.html">Artigos</a></li>
                 <li class="item"><a href="PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
                 <li class="item"><a href="Formularios_inscriçoes.html">Registro</a></li>
+                <li class="item">
+                    <input type="checkbox" id="btn" name="btn">
+                    <label for="btn">Modo Escuro</label>
+                </li>
             </ul>
         </nav>
     </header>
