--- a/html/Artigos_sbre_doação.html
+++ b/html/Artigos_sbre_doação.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/cabecalho.css">
     <link rel="stylesheet" href="../styles/artigos.css">
     <link rel="stylesheet" href="../styles/rodape.css">
+    <link rel="stylesheet" href="../styles/modo-dark.css">
     <script src="../js/Artigos.js" defer></script>
     <script src="../js/libras.js"></script>
 
@@ -17,14 +18,6 @@
 </head>
 
 <body>
-
-    <div class="container">
-        <input type="checkbox" id="btn" name="btn">
-        <label for="btn"></label>
-        
-    </div>
-    
-
     <header>
         <nav>
             <a href="../index.html"><img src="../assets/imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
@@ -33,6 +26,10 @@
                 <li class="item"><a href="Artigos_sbre_doação.html">Artigos</a></li>
                 <li class="item"><a href="PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
                 <li class="item"><a href="Formularios_inscriçoes.html">Registro</a></li>
+                <li class="item">
+                    <input type="checkbox" id="btn" name="btn">
+                    <label for="btn">Modo Escuro</label>
+                </li>
             </ul>
         </nav>
     </header>
