--- a/html/salva-tres-vidas.html
+++ b/html/salva-tres-vidas.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
     <header>
         <nav>
             <a href="../index.html"><img src="../assets/imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
@@ -23,6 +22,10 @@
                 <li class="item"><a href="Artigos_sbre_doação.html">Artigos</a></li>
                 <li class="item"><a href="PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
                 <li class="item"><a href="Formularios_inscriçoes.html">Registro</a></li>
+                <li class="item">
+                    <input type="checkbox" id="btn" name="btn">
+                    <label for="btn">Modo Escuro</label>
+                </li>
             </ul>
         </nav>
     </header>
