--- a/html/Artigos_sbre_doação.html
+++ b/html/Artigos_sbre_doação.html
@@ -34,6 +34,17 @@
         </nav>
     </header>
 
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+
     <main>
         <img class="banner1" src="../assets/imagens/Corpo/Sem título.jpg" alt="imagem principal">
 
