--- a/html/Formularios_inscriçoes.html
+++ b/html/Formularios_inscriçoes.html
@@ -33,6 +33,17 @@
         </nav>
     </header>
 
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+
     <main>
         <h1 class="titulo">Formulário de Doação de Sangue </h1>
         <div class="formulario">
