--- a/html/Artigos_sbre_doação.html
+++ b/html/Artigos_sbre_doação.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../styles/artigos.css">
     <link rel="stylesheet" href="../styles/rodape.css">
     <link rel="stylesheet" href="../styles/modo-dark.css">
-    <script src="../js/Artigos.js" defer></script>
+    <script src="../js/Artigos_doaçao.js" defer></script>
     <script src="../js/libras.js"></script>
 
     <!-- Nome do site -->
@@ -34,20 +34,20 @@
         </nav>
     </header>
 
-    <div vw class="enabled">
-        <div vw-access-button class="active"></div>
-        <div vw-plugin-wrapper>
-          <div class="vw-plugin-top-wrapper"></div>
-        </div>
-      </div>
-      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-      <script>
-        new window.VLibras.Widget('https://vlibras.gov.br/app');
-      </script>
-
     <main>
-        <img class="banner1" src="../assets/imagens/Corpo/Sem título.jpg" alt="imagem principal">
 
+        <div class="slider-container">
+            <div class="slider">
+                
+                <img src="../assets/imagens/IMG_1.jpg" alt="Imagem sobre a Doação de Sangue">
+                <img src="../assets/imagens/IMG_2.jpeg" alt="Imagem sobre a Doação de Sangue">
+                <img src="../assets/imagens/IMG_3.jpg" alt="Imagem sobre a Doação de Sangue">
+                <img src="../assets/imagens/IMG_4.jpg" alt="Imagem sobre a Doação de Sangue">
+            </div>
+            <i class="fa-solid fa-chevron-left btn" id="prevBtn"></i>
+            <i class="fa-solid fa-chevron-right btn" id="nextBtn"></i>
+        </div>
+       
         <section class="artigos">
             <div class="artigo">
                 <li><a href="https://calendar.google.com/calendar/u/0/r?pli=1"> Calendario </a></li>
