--- a/html/Artigos_sbre_doação.html
+++ b/html/Artigos_sbre_doação.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/rodape.css">
     <link rel="stylesheet" href="../styles/modo-dark.css">
     <script src="../js/Artigos_doaçao.js" defer></script>
-    <script src="../js/libras.js"></script>
+   
 
     <!-- Nome do site -->
     <title>HemoBlog: Gotas de Vida</title>
@@ -33,6 +33,17 @@
             </ul>
         </nav>
     </header>
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
 
     <main>
 
