--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/cabecalho.css">
     <link rel="stylesheet" href="../styles/duvidas.css">
+    <link rel="stylesheet" href="../styles/validacao-formularios.css">
     <link rel="stylesheet" href="../styles/rodape.css">
     <link rel="stylesheet" href="../styles/modo-dark.css">
     <script src="../js/Artigos.js" defer></script>
