update Formulário para apresentacao final

--- a/html/Formularios_inscriçoes.html
+++ b/html/Formularios_inscriçoes.html
@@ -87,7 +87,12 @@
                 </label>
                 <input type="text" id="endereco" name="endereco"><br><br>
                 <p id="endereco-helper" class="helper-text">Por Favor insira um endereço válido!</p>
+
+                <label for="data_ultima_doacao">Data de última doação:</label>
+                <input type="date" id="data_ultima_doacao:"><br><br>
+
                 <a href="#" id="enviar" class="enviar">Enviar</a>
+
             </form>
             <div>
                 <img src="../assets/imagens/imagen-registro.png" alt="imagem" class="imagem">
